fixed start block shape z-index to -1

--- a/gutenberg-blocks/start-block/style.scss
+++ b/gutenberg-blocks/start-block/style.scss
@@ -101,7 +101,7 @@
 						right: auto;
 						width: 100%;
 						height: 100%;
-						z-index: 0;
+						z-index: -1;
 
 						img {
 							width: 100%;
